tests/negative/gold/block_define_test.gold
tests/negative/block_define_test.toit:5:7: error: Can't return a block from a lambda
    x := :499
      ^~
Compilation failed.
